--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,28 +2,28 @@ spring:
   application:
     name: coffee-with-telegram
 
-  datasource:
-    url: jdbc:mysql://localhost:3306/notesdb?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
-    username: root
-    password:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    hikari:
-      connection-timeout: 20000
-      minimum-idle: 5
-      maximum-pool-size: 10
-      idle-timeout: 300000
-      max-lifetime: 1200000
-      auto-commit: true
+  #  datasource:
+  #    url: jdbc:mysql://localhost:3306/notesdb?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
+  #    username: root
+  #    password:
+  #    driver-class-name: com.mysql.cj.jdbc.Driver
+  #    hikari:
+  #      connection-timeout: 20000
+  #      minimum-idle: 5
+  #      maximum-pool-size: 10
+  #      idle-timeout: 300000
+  #      max-lifetime: 1200000
+  #      auto-commit: true
 
-  jpa:
-    database-platform: org.hibernate.dialect.MySQLDialect
-    properties:
-      hibernate:
-        format_sql: true
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-    open-in-view: true
+#  jpa:
+#    database-platform: org.hibernate.dialect.MySQLDialect
+#    properties:
+#      hibernate:
+#        format_sql: true
+#    hibernate:
+#      ddl-auto: update
+#    show-sql: true
+#    open-in-view: true
 
 server:
   error:
